# MDSIM1

./: .gitattributes  .gitignore  CMakeLists.txt  G4History.macro  LICENSE  MultiDetector1.cc  README.md
.codex-tmp/: vis_vtk_offscreen_export.mac
.codex-tmp/geant4-vtk-patch/: G4VtkClipClosedSurfacePipeline.cc  G4VtkClipOpenPipeline.cc  G4VtkPolydataPipeline.cc
Testing/validation_summary_axes/: atIsocenter_summary.txt  latProfile_x_summary.txt  latProfile_y_summary.txt  pddBuildup_summary.txt  pdd_summary.txt
analysis/: BB7Calibration.ipynb  BB7CalibrationAngles.ipynb  BB7CalibrationRotX90deg.ipynb  BB7Readout.ipynb  Calibration.ipynb  Penumbra.ipynb  Validation.ipynb
analysis/dosimetry_invivo/dose_at_interface/: dose_at_interface.ipynb
analysis/dosimetry_invivo/pdd/: pdd.ipynb
beam/: Co-60.txt  CyberKnife_IRIS_5mm.IAEAheader  CyberKnife_IRIS_5mm.IAEAphsp  Varian_TrueBeam6MV_01.IAEAheader  Varian_TrueBeam6MV_01.IAEAphsp  Varian_TrueBeam6MV_02.IAEAheader  Varian_TrueBeam6MV_02.IAEAphsp  Varian_TrueBeam6MV_03.IAEAheader  Varian_TrueBeam6MV_03.IAEAphsp  Varian_TrueBeam6MV_04.IAEAheader  Varian_TrueBeam6MV_04.IAEAphsp  Varian_TrueBeam6MV_05.IAEAheader  Varian_TrueBeam6MV_05.IAEAphsp  Varian_TrueBeam6MV_06.IAEAheader  Varian_TrueBeam6MV_06.IAEAphsp  circularplane.txt  photon6MV.txt  squareplane.txt
cmake/tests/: GDMLAssemblyCacheProbe.cc  GDMLColorCodecProbe.cc  GDMLExportProbe.cc  check_calibration_readout_separation.cmake  check_detector_signal_smoke.cmake  check_expected_failure.cmake  check_gdml_cache_reload.cmake  check_gdml_color_codec.cmake  check_gdml_import_cleanup.cmake  check_geometry_export_smoke.cmake  check_idle_cube_split_rebuild_mt.cmake  check_idle_cylinder_split_rebuild_mt.cmake  check_idle_detector_refresh.cmake  check_idle_detector_remove.cmake  check_idle_detector_remove_mt.cmake  check_idle_model11_split_rebuild_mt.cmake  check_idle_sphere_split_rebuild_mt.cmake  check_incomplete_phsp_dataset.cmake  check_invalid_eof_policy.cmake  check_model11_imported_geometry_assembly_runtime.cmake  check_model11_imported_geometry_aux_sensdet.cmake  check_model11_imported_geometry_passive_only_smoke.cmake  check_model11_imported_geometry_smoke.cmake  check_model11_imported_geometry_validate_invalid.cmake  check_model11_signal_smoke.cmake  check_model11_split_rebuild.cmake  check_phantom_size_messenger_smoke.cmake  check_scintcube_signal_smoke.cmake  check_validation_summary_axes.cmake  check_watertube_geometry_smoke.cmake  check_zero_event_phsp_lazy.cmake  run_labeled_ctest.cmake
cmake/tests/output/: debug_multiple_model11_world.gdml  exported_model11_coupler.gdml  exported_model11_sensor.gdml  (+1 more)
include/: BB7Digit.hh  BB7Digitizer.hh  BB7Hit.hh  BB7SensitiveDetector.hh  ClinacTrueBeam.hh  ClinacTrueBeamMessenger.hh  DetectorDualBB7.hh  DetectorDualBB7Messenger.hh  DetectorSingleBB7.hh  G4IAEAphspReader.hh  GenericGeometry.hh  MD1ActionInitialization.hh  MD1BOptnSplitOrKillOnBoundary.hh  MD1BOptrGeometryBasedBiasing.hh  MD1Control.hh  MD1ControlMessenger.hh  MD1DetectorConstruction.hh  MD1DetectorConstructionMessenger.hh  MD1EventAction.hh  MD1PhspSourceConfig.hh  MD1PrimaryGeneratorAction1.hh  MD1PrimaryGeneratorAction2.hh  MD1RunAction.hh  MD1RunActionMessenger.hh  MLC80.hh  MLC80Messenger.hh  PhantomWaterBox.hh  PhantomWaterBoxMessenger.hh  iaea_record.h  utilities.h
include/analysis/: DetectorAccumulablesStore.hh  MD1StatAccumulable.hh  RunSummaryUtils.hh
input/: BB7.in  BB7.intmp  BB7Calibration.in  BB7Calibration.intmp  Calibration.in  Calibration.intmp  DoseMap3D.in  Validation.in  Validation.intmp
input/benchmark/: set1.in  set2.in  set3.in
input/dosimetry/: Calibration.in  DoseMap3D.in  Validation.in
jobs/: job1.sh  job2a.sh  job2b.sh  job2c.sh  job4a.sh  job4b.sh  job_launcher1.sh  job_launcher2a.sh  job_launcher2b.sh  job_launcher2c.sh  job_launcher3.sh  job_launcher4a.sh  job_launcher4b.sh
jobs/dosimetry/: launch_calibration_dmax.sh  launch_calibration_dmax_average.sh  launch_validation.sh  launch_validation_phsp_sweep.sh  run_calibration_dmax.sh  run_calibration_dmax_average.sh  run_validation.sh  run_validation_phsp_sweep.sh
jobs/lib/: md1_job_helpers.sh
mac/: init.mac  qt_ui.mac  scorers1.mac  view_z_vertical.mac  vis.mac  vis_vtk.mac  vis_vtk_fast.mac  vis_vtk_offscreen.mac  vis_vtk_yz_xge0.mac
mac/tests/: bb7_signal_smoke.mac  cube_signal_smoke.mac  cube_signal_watertube_smoke.mac  cylinder_signal_smoke.mac  geometry_export_smoke.mac  idle_cube_split_rebuild.mac  idle_cylinder_split_rebuild.mac  idle_detector_refresh.mac  idle_detector_remove.mac  idle_model11_split_rebuild.mac  idle_sphere_split_rebuild.mac  invalid_eof_policy.mac  invalid_primary_generator_type.mac  model11_imported_geometry_assembly_auto.mac  model11_imported_geometry_assembly_runtime.mac  model11_imported_geometry_aux_sensdet.mac  model11_imported_geometry_invalid_color.mac  model11_imported_geometry_missing_gdml.mac  model11_imported_geometry_passive_only_smoke.mac  model11_imported_geometry_smoke.mac  model11_imported_geometry_split_unsupported.mac  model11_imported_geometry_validate_invalid.mac  model11_imported_geometry_validate_smoke.mac  model11_signal_smoke.mac  scintcube_signal_smoke.mac  sphere_signal_smoke.mac  waterbox_size_messenger_smoke.mac  watertube_size_messenger_smoke.mac
src/: BB7Digit.cc  BB7Digitizer.cc  BB7Hit.cc  BB7SensitiveDetector.cc  ClinacTrueBeam.cc  ClinacTrueBeamMessenger.cc  DetectorDualBB7.cc  DetectorDualBB7Messenger.cc  DetectorSingleBB7.cc  G4IAEAphspReader.cc  G4IAEAphspWriter.cc  GenericGeometry.cc  MD1ActionInitialization.cc  MD1BOptnSplitOrKillOnBoundary.cc  MD1BOptrGeometryBasedBiasing.cc  MD1Control.cc  MD1ControlMessenger.cc  MD1DetectorConstruction.cc  MD1DetectorConstructionMessenger.cc  MD1EventAction.cc  MD1PhspSourceConfig.cc  MD1PrimaryGeneratorAction1.cc  MD1PrimaryGeneratorAction2.cc  MD1RunAction.cc  MD1RunActionMessenger.cc  MLC80.cc  MLC80Messenger.cc  PhantomWaterBox.cc  PhantomWaterBoxMessenger.cc  iaea_phsp.cc  iaea_record.cc  utilities.cc
src/analysis/: DetectorAccumulablesStore.cc  RunSummaryUtils.cc
(+279 files in other folders)
